fixed link at ## Calibrate Car

--- a/051-DonkeyCar.Rmd
+++ b/051-DonkeyCar.Rmd
@@ -518,7 +518,7 @@ sudo apt install nmap
 ## Calibrate Car
 
 This command allows you to manually enter values to interactively set the PWM values and experiment with how your robot responds.
-See also [more information.](/guide/calibrate/)
+See also [more information.](http://docs.donkeycar.com/guide/calibrate/#calibrate-your-car)
 
 Usage:
 ```bash
