--- a/07-references.Rmd
+++ b/07-references.Rmd
@@ -81,11 +81,18 @@ Here are links to instructions on how to get things done
 - [AWS DeepRacer](https://aws.amazon.com/deepracer/)  
 
 
+## Write ups on Donkeycar projects
+
+[Learning to Drive Smoothly in Minutes
+Reinforcement Learning on a Small Racing Car](https://towardsdatascience.com/learning-to-drive-smoothly-in-minutes-450a7cdb35f4)
+
+
 ## Other stuff
 
 [ESC explained](https://en.wikipedia.org/wiki/Electronic_speed_control) 
 
 [LED on The Adafruit 16-Channel 12-bit PWM/Servo HAT](https://cdn-learn.adafruit.com/downloads/pdf/16-channel-pwm-servo-driver.pdf)
+
 
 
 
