--- a/07-references.Rmd
+++ b/07-references.Rmd
@@ -87,6 +87,8 @@ Here are links to instructions on how to get things done
 Reinforcement Learning on a Small Racing Car](https://towardsdatascience.com/learning-to-drive-smoothly-in-minutes-450a7cdb35f4)
 
 
+[HOW TO SET UP A ROBOCAR PLATFORM WITH A REMOTE CONTROL UNIT by itemis](https://blogs.itemis.com/en/how-to-set-up-a-robocar-platform-with-a-remote-control-unit)
+
 ## Other stuff
 
 [ESC explained](https://en.wikipedia.org/wiki/Electronic_speed_control) 
