--- a/051-DonkeyCar.Rmd
+++ b/051-DonkeyCar.Rmd
@@ -494,6 +494,45 @@ then type the password of the pi, afterwards the the file ```mycar/manage.py``` 
 /Users/uwesterr/CloudProjectsUnderWork 
 ```
 
+### Copy files to USB drive
+TBD, not managed to get this to work
+Der Befehl
+```usb-devices```
+zeigt eine ausführliche Übersicht der USB Geräte und Busse an. Diese Liste ist kompakter als die Liste die durch den Befehl lsusb -v erzeugt wird.
+
+
+according to http://www.netzmafia.de/skripten/hardware/RasPi/RasPi_Laufwerke.html
+
+Im Gegensatz zum Windows-Gefrickel mit Laufwerksbuchstaben, wird bei Linux eine Platte bzw. Plattenpartition ("Dateisystem" genannt) in ein beliebiges Unterverzeichnis eingehängt ("mounted"). Also legen Sie zuerst einen Ordner für die Platte oder den USB-Stick an ("Mountpoint" genannt). Per Konvention geschiet die meist im Verzeichnis /media - was in den folgenden Beispielen auch so gehandhabt wird. Zum Beispiel nenne ich den Ordner usbdisk. Der Name kann frei gewählt werden, sollte aber keine Sonder- oder Leerzeichen enthalten:
+
+```
+sudo mkdir /media/usbdisk
+```
+
+Bevor Sie den Stick oder die Platte anschließen, schalten Sie die Ausgabe des Systemlogs mit dem folgenden Kommando ein ("-f" sorgt dafür, dass alle weiteren Meldungen ausgegeben werden, ohne tail zu beenden):
+
+```
+(env) pi@donkeypi_uwe:/media $ tail -f /var/log/messages
+
+```
+Wenn Sie nun den USB-Stick oder die Platte anschließen, werden entsprechende Log-Einträge angezeigt, zum Beispiel:
+
+```
+tail: cannot open '–f' for reading: No such file or directory
+==> /var/log/messages <==
+Mar 22 17:20:46 donkeypi_uwe kernel: [  278.505355] usb-storage 1-1.3:1.0: USB Mass Storage device detected
+Mar 22 17:20:46 donkeypi_uwe kernel: [  278.505724] scsi host0: usb-storage 1-1.3:1.0
+Mar 22 17:20:46 donkeypi_uwe mtp-probe: checking bus 1, device 5: "/sys/devices/platform/soc/3f980000.usb/usb1/1-1/1-1.3"
+Mar 22 17:20:46 donkeypi_uwe mtp-probe: bus: 1, device: 5 was not an MTP device
+Mar 22 17:20:47 donkeypi_uwe kernel: [  279.602877] scsi 0:0:0:0: Direct-Access     Kingston DataTraveler 3.0 PMAP PQ: 0 ANSI: 6
+Mar 22 17:20:47 donkeypi_uwe kernel: [  279.603908] sd 0:0:0:0: Attached scsi generic sg0 type 0
+Mar 22 17:20:48 donkeypi_uwe kernel: [  280.989507] sd 0:0:0:0: [sda] 61457664 512-byte logical blocks: (31.5 GB/29.3 GiB)
+Mar 22 17:20:48 donkeypi_uwe kernel: [  280.989729] sd 0:0:0:0: [sda] Write Protect is off
+Mar 22 17:20:48 donkeypi_uwe kernel: [  281.019596] sd 0:0:0:0: [sda] Attached SCSI removable disk
+Mar 22 17:20:50 donkeypi_uwe kernel: [  282.873096] Voltage normalised (0x00000000)
+```
+
+
 ### How big is the tub folder
 If you want to know how many MB of data you collected already use the `su` comand. More info on the `su` command [here](https://unix.stackexchange.com/questions/185764/how-do-i-get-the-size-of-a-directory-on-the-command-line)
 ```
